infrastructure/deployments/postgres-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
spec:
    serviceName: postgres
    selector:
        matchLabels:
            app: postgres
    replicas: 3
    template:
        metadata:
            labels:
                app: postgres
                role: postgres
        spec:
            terminationGracePeriodSeconds: 10
            containers:
                - name: postgres
                  image: postgres

                  ports:
                      - name: postgres
                        containerPort: 5432
                        protocol: TCP

                  resources:
                    requests:
                      cpu: 100m
                      memory: 256Mi

                  volumeMounts:
                      - name: postgres-persistent-storage
                        mountPath: /var/lib/postgresql/data
    volumeClaimTemplates:
        - metadata:
            name: postgres-persistent-storage
            annotations:
                volume.beta.kubernetes.io/storage-class: "fast"
          spec:
            accessModes: [ "ReadWriteOnce" ]
            storageClassName: "standard"
            resources:
                requests:
                    storage: 1Gi
