infrastructure/deployments/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ingress.local
    http:
      paths:
      - path: /web(/|$)(.*)
        backend:
          serviceName: shippy-ui
          servicePort: 80
      - path: /api(/|$)(.*)
        backend:
          serviceName: micro
          servicePort: 80
